--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -15,7 +15,4 @@ $font1: "Montserrat", sans-serif;
 $font2: "Playfair Display SC", serif;
 
 // Цвета
-$color-back: #f5f2e9;
-$color-red: #e51414;
-$color-yellow: #f2c215;
-$main-color: #34495e;
+$color-main: #2cade4;;
