--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -93,17 +93,28 @@ body {
   font-weight: 500;
   color: #000000;
   background: #ffffff;
+  height: 100vh;
 }
 
+
 .wrapper {
-  // max-width: $wrapper-width;
   width: 100%;
   margin: 0 auto;
   padding: 0 120px;
+}
 
-  @include tablet {
-  }
-
-  @include wide-mobile {
-  }
+.btn {
+  background: $color-main;
+  border-radius: 38px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-weight: 600;
+  font-size: 24px;
+  line-height: 30px;
+  text-align: center;
+  font-family: $font1;
+  color: #ffffff;
+  max-width: 405px;
+  padding: 23px 0;
 }
