--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -1,7 +1,7 @@
 .header {
-  background: #fef6eb;
   padding-top: 50px;
-  display: none;
+  position: absolute;
+  top: 0;right: 0;left: 0;
 }
 
 .header__inner {
