--- a/src/scss/_promo.scss
+++ b/src/scss/_promo.scss
@@ -1,27 +1,125 @@
 .promo {
   background: url("../img/promo__back.jpg") no-repeat center / cover;
   padding-top: 220px;
-  padding-bottom: 330px;
+  padding-bottom: 100px;
+  min-height: 1000px;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+
+  .wrapper {
+    display: flex;
+    flex-direction: column;
+    flex-grow: 1;
+    height: 100%;
+  }
 }
 
 .promo__inner {
+  grid-auto-flow: row;
+  flex-grow: 1;
+  height: 100%;
   display: grid;
+  grid-template-columns: 1fr 300px;
+  row-gap: 35px;
+  grid-template-rows: auto auto auto 1fr;
+  align-content: stretch;
+  grid-template-areas:
+    "title title"
+    "text info"
+    "btn info"
+    "social social";
 }
 
 .promo__title {
+  grid-area: title;
   font-style: normal;
   font-weight: bold;
   font-size: 64px;
   line-height: 75px;
   color: #000000;
   font-family: $font2;
-  margin-bottom: 40px;
+  max-width: 900px;
 }
 
 .promo__text {
+  grid-area: text;
   font-weight: normal;
   font-size: 24px;
   line-height: 45px;
   font-family: $font1;
   color: #000000;
+  max-width: 900px;
+}
+
+.promo__btn {
+  grid-area: btn;
+  align-self: start;
+}
+
+.promo__info {
+  grid-area: info;
+}
+
+.promo__info {
+  display: flex;
+  flex-direction: column;
+  row-gap: 25px;
+
+  p,
+  a,
+  dl,
+  dd {
+    display: block;
+    font-family: $font1;
+    font-weight: normal;
+    font-size: 15px;
+    line-height: 20px;
+    color: #1b1a1a;
+  }
+}
+
+.promo__social {
+  grid-area: social;
+  align-self: stretch;
+  align-self: end;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+}
+
+.promo__social-text {
+  font-weight: normal;
+  font-size: 15px;
+  line-height: 45px;
+  font-family: $font1;
+  letter-spacing: 0.01em;
+  color: #ffffff;
+}
+
+.promo__social-list {
+  display: flex;
+  align-items: center;
+  column-gap: 40px;
+}
+
+.promo__social-item {
+  a {
+    display: block;
+    width: 25px;
+    height: 25px;
+
+    &:hover {
+      svg {
+        fill: $color-main;
+      }
+    }
+  }
+
+  svg {
+    width: 100%;
+    height: 100%;
+    fill: #ffffff;
+  }
 }
