--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -2,5 +2,7 @@
 @import "./variables";
 @import "./mixins";
 @import "./base";
+@import "./main";
 @import "./header";
 @import "./promo";
+@import "./works";
