--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -12,13 +12,5 @@
   color: #ffffff;
   max-width: 405px;
   padding: 23px 0;
-}
-
-.section-title {
-  font-weight: bold;
-  font-size: 56px;
-  line-height: 42px;
-  font-family: $font2;
-  color: #ffffff;
-  margin-bottom: 50px;
+  width: 100%;
 }
