--- a/src/scss/_douments.scss
+++ b/src/scss/_douments.scss
@@ -1,6 +1,7 @@
 .documents {
   background: url("../img/documents__back.jpg") no-repeat center / cover;
   padding-top: 120px;
+  padding-bottom: 120px;
   min-height: 100vh;
 }
 
