--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -14,3 +14,13 @@
   padding: 23px 0;
   width: 100%;
 }
+
+
+.section-title {
+  font-weight: bold;
+  font-size: 48px;
+  line-height: 42px;
+  font-family: $font2;
+  text-align: center;
+  color: #000000;
+}
