--- a/src/scss/_douments.scss
+++ b/src/scss/_douments.scss
@@ -1,5 +1,5 @@
 .documents {
-  background: url("../img/documents__back.jpg") no-repeat center / cover;
+  background: url("../img/documents__back.jpg") no-repeat center / 100% 100%;
   padding-top: 120px;
   padding-bottom: 120px;
   min-height: 100vh;
