--- a/src/scss/_works.scss
+++ b/src/scss/_works.scss
@@ -1,5 +1,5 @@
 .works {
-  background: url("../img/works__back.jpg") no-repeat center / cover;
+  background: url("../img/works__back.jpg") no-repeat center / 100% 100%;
   padding-top: 75px;
   min-height: 100vh;
 }
