--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -13,8 +13,14 @@
   max-width: 405px;
   padding: 23px 0;
   width: 100%;
-}
 
+  &--trans {
+    border: 2px solid $color-main;
+    background: transparent;
+    color: $color-main;
+    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  }
+}
 
 .section-title {
   font-weight: bold;
