--- a/src/scss/_news.scss
+++ b/src/scss/_news.scss
@@ -1,7 +1,8 @@
 .news {
   min-height: 100vh;
-  background: url("../img/news__back.jpg") no-repeat center;
+  background: url("../img/news__back.jpg") no-repeat center / 100% 100%;
   padding-top: 120px;
+  padding-bottom: 300px;
 }
 
 .news__title {
