--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -1,7 +1,9 @@
 .header {
   padding-top: 50px;
   position: absolute;
-  top: 0;right: 0;left: 0;
+  top: 0;
+  right: 0;
+  left: 0;
 }
 
 .header__inner {
@@ -36,14 +38,21 @@
   }
 }
 
-.header__btn-wrapper {
+.header__btn--wrapper {
+  width: 154px;
+}
+
+.header__btn {
   width: 30px;
   height: 30px;
   display: flex;
   align-items: center;
   justify-content: center;
   position: relative;
-  margin-left: 124px;
+  padding: 0;
+  border: none;
+  background: none;
+  margin-left: auto;
 
   span {
     width: 100%;
