--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -15,4 +15,4 @@ $font1: "Montserrat", sans-serif;
 $font2: "Playfair Display SC", serif;
 
 // Цвета
-$color-main: #2cade4;;
+$color-main: #2cade4;
