--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -35,6 +35,11 @@
     line-height: 45px;
     text-align: center;
     color: #000000;
+    transition: all 0.3s;
+
+    &:hover {
+      color: $color-main;
+    }
   }
 }
 
@@ -53,6 +58,7 @@
   border: none;
   background: none;
   margin-left: auto;
+  cursor: pointer;
 
   span {
     width: 100%;
