--- a/src/scss/_contact.scss
+++ b/src/scss/_contact.scss
@@ -29,9 +29,6 @@
   max-width: 250px;
 }
 
-.contact__form-wrapper {
-}
-
 .contact__form {
   width: 100%;
   max-width: 285px;
@@ -55,8 +52,9 @@
 }
 
 .contact__btn {
-  border: none;
+  border: 2px solid $color-main;
   margin-bottom: 30px;
+  padding: 21px 0;
 }
 
 .contact__warning {
