--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -11,14 +11,32 @@
   font-family: $font1;
   color: #ffffff;
   max-width: 405px;
-  padding: 23px 0;
+  padding: 21px 0;
   width: 100%;
+  cursor: pointer;
+  transition: all 0.2s;
+  border: 2px solid $color-main;
+
+  &:hover {
+    border: 2px solid $color-main;
+    background: transparent;
+    color: $color-main;
+    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    padding: 21px 0;
+  }
 
   &--trans {
     border: 2px solid $color-main;
     background: transparent;
     color: $color-main;
     text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+
+    &:hover {
+      border: 2px solid $color-main;
+      background: $color-main;
+      color: #ffffff;
+      padding: 21px 0;
+    }
   }
 }
 
