--- a/src/scss/_news.scss
+++ b/src/scss/_news.scss
@@ -44,22 +44,26 @@
   a {
     position: relative;
 
-    &::after {
-      position: absolute;
-      content: "";
-      bottom: 0;
-      left: 0;
-      right: 0;
-      width: 100%;
-      height: 1px;
-      background: #ffffff;
-      transform: scale(0);
-      transition: all 0.3s;
+    &:hover {
+      text-decoration: underline;
     }
 
-    &:hover::after {
-      transform: scale(1);
-    }
+    // &::after {
+    //   position: absolute;
+    //   content: "";
+    //   bottom: 0;
+    //   left: 0;
+    //   right: 0;
+    //   width: 100%;
+    //   height: 1px;
+    //   background: #ffffff;
+    //   transform: scale(0);
+    //   transition: all 0.3s;
+    // }
+
+    // &:hover::after {
+    //   transform: scale(1);
+    // }
   }
 
   h3 {
