--- a/src/scss/_works.scss
+++ b/src/scss/_works.scss
@@ -44,6 +44,12 @@
   flex-direction: column;
   justify-content: flex-end;
   padding-right: 45px;
+  transition: all 0.3s;
+
+  &:hover {
+    transform: scale(1.01);
+
+  }
 
   &::before {
     counter-increment: item;
