--- a/src/scss/_promo.scss
+++ b/src/scss/_promo.scss
@@ -6,6 +6,11 @@
   display: flex;
   flex-direction: column;
 
+  @include _768 {
+    padding-top: 170px;
+    padding-bottom: 50px;
+  }
+
   .wrapper {
     display: flex;
     flex-direction: column;
@@ -24,6 +29,17 @@
   font-family: $font2;
   max-width: 900px;
   margin-bottom: 30px;
+
+  @include _768 {
+    font-size: 40px;
+    line-height: 50px;
+    text-align: center;
+  }
+
+  @include _480 {
+    font-size: 30px;
+    line-height: 40px;
+  }
 }
 
 .promo__inner {
@@ -31,6 +47,10 @@
   height: 100%;
   align-self: stretch;
   flex-grow: 1;
+
+  @include _1280 {
+    flex-direction: column;
+  }
 }
 
 .promo__left {
@@ -48,11 +68,29 @@
   color: #000000;
   max-width: 900px;
   margin-bottom: 30px;
+
+  @include _768 {
+    font-size: 20px;
+    line-height: 30px;
+    margin-bottom: 100px;
+    text-align: center;
+  }
+
+  @include _480 {
+    font-size: 18px;
+    line-height: 24px;
+  }
 }
 
 .promo__btn {
   grid-area: btn;
   align-self: start;
+
+  @include _768 {
+    margin: 0 auto;
+    margin-top: auto;
+    margin-bottom: 50px;
+  }
 }
 
 .promo__info {
@@ -63,6 +101,10 @@
   display: flex;
   flex-direction: column;
   row-gap: 25px;
+
+  @include _768 {
+    display: none;
+  }
 
   p,
   a,
@@ -85,6 +127,10 @@
   flex-direction: column;
   justify-content: flex-end;
   margin-top: auto;
+
+  @include _768 {
+    margin: 0 auto;
+  }
 }
 
 .promo__social-text {
