--- a/src/scss/_douments.scss
+++ b/src/scss/_douments.scss
@@ -3,6 +3,11 @@
   padding-top: 120px;
   padding-bottom: 120px;
   min-height: 100vh;
+
+  @include _992 {
+    padding-top: 50px;
+    padding-bottom: 50px;
+  }
 }
 
 .documents__title {
@@ -13,22 +18,49 @@
   text-align: center;
   color: #000000;
   margin-bottom: 70px;
+
+  @include _992 {
+    font-size: 40px;
+    line-height: 42px;
+  }
 }
 
 .documents__inner {
   display: flex;
   align-items: stretch;
   justify-content: space-between;
+
+  @media (max-width: 1600px) {
+    flex-wrap: wrap;
+  }
 }
 
 .documents__img-wrpapper {
   width: 425px;
   flex-shrink: 0;
+
+  @media (max-width: 1600px) {
+    order: 0;
+    width: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 25px;
+  }
+
+  @include _992 {
+    width: 100%;
+  }
 }
 
 .documents__content {
   display: flex;
   align-items: stretch;
+
+  @media (max-width: 1600px) {
+    order: 1;
+    width: 100%;
+  }
 }
 
 .document__content-inner {
@@ -38,6 +70,12 @@
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
+  padding: 0 10px;
+
+  @media (max-width: 1600px) {
+    max-width: none;
+    width: 100%;
+  }
 
   p {
     font-family: $font1;
@@ -46,6 +84,10 @@
     line-height: 27px;
     text-align: center;
     color: #000000;
+
+    @media (max-width: 1600px) {
+      margin-bottom: 20px;
+    }
 
     &:nth-of-type(2n) {
       font-weight: 500;
