--- a/src/scss/_news.scss
+++ b/src/scss/_news.scss
@@ -3,30 +3,73 @@
   background: url("../img/news__back.jpg") no-repeat center / 100% 100%;
   padding-top: 120px;
   padding-bottom: 300px;
+
+  @include _992 {
+    padding-top: 50px;
+    padding-bottom: 30px;
+    min-height: auto;
+  }
 }
 
 .news__title {
   color: #ffffff;
   margin-bottom: 100px;
+
+  @include _992 {
+    margin-bottom: 30px;
+  }
+}
+
+.news__list {
+  display: flex;
+  width: 100%;
 }
 
 .news__item {
   display: flex;
   justify-content: space-between;
-  column-gap: 120px;
   align-items: flex-start;
+  margin: 0 -60px;
+  overflow: hidden;
+
+  @media (max-width: 1600px) {
+    margin: 0 -30px;
+  }
+
+  @include _992 {
+    margin: 0 -15px;
+    display: block;
+  }
 }
 
 .news__img {
   width: 410px;
   flex-shrink: 0;
-  border-radius: 20px;
   overflow: hidden;
+  padding: 0 60px;
+  box-sizing: content-box;
+
+  @media (max-width: 1600px) {
+    padding: 0 30px;
+  }
+
+  @include _992 {
+    padding: 0 15px;
+    float: left;
+  }
+
+  @include _768 {
+    width: 100%;
+    float: none;
+    box-sizing: border-box;
+    margin-bottom: 25px;
+  }
 
   img {
     object-fit: cover;
     width: 100%;
     height: 100%;
+    border-radius: 20px;
   }
 }
 
@@ -40,6 +83,17 @@
   flex-direction: column;
   justify-content: space-between;
   align-self: stretch;
+  width: 100%;
+  padding: 0 60px;
+
+  @media (max-width: 1600px) {
+    padding: 0 30px;
+  }
+
+  @include _992 {
+    padding: 0 15px;
+    display: block;
+  }
 
   a {
     position: relative;
@@ -47,23 +101,6 @@
     &:hover {
       text-decoration: underline;
     }
-
-    // &::after {
-    //   position: absolute;
-    //   content: "";
-    //   bottom: 0;
-    //   left: 0;
-    //   right: 0;
-    //   width: 100%;
-    //   height: 1px;
-    //   background: #ffffff;
-    //   transform: scale(0);
-    //   transition: all 0.3s;
-    // }
-
-    // &:hover::after {
-    //   transform: scale(1);
-    // }
   }
 
   h3 {
@@ -81,6 +118,7 @@
   display: flex;
   align-items: center;
   margin-bottom: 15px;
+  flex-wrap: wrap;
 
   li {
     &:not(:last-of-type) {
