--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -29,7 +29,6 @@
     background: transparent;
     color: $color-main;
     text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-    padding: 21px 0;
   }
 
   &--trans {
@@ -42,7 +41,15 @@
       border: 2px solid $color-main;
       background: $color-main;
       color: #ffffff;
-      padding: 21px 0;
+      // padding: 21px 0;
+    }
+  }
+
+  &:hover {
+    padding: 21px 0;
+
+    @include _768 {
+      padding: 10px 5px;
     }
   }
 }
