--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -61,4 +61,10 @@
   font-family: $font2;
   text-align: center;
   color: #000000;
+
+  @include _992 {
+    margin-bottom: 30px;
+    font-size: 40px;
+    line-height: 42px;
+  }
 }
