--- a/src/scss/_footer.scss
+++ b/src/scss/_footer.scss
@@ -5,16 +5,49 @@
 .footer__inner {
   display: flex;
   align-items: center;
+
+  @include _992 {
+    flex-direction: column;
+    align-items: stretch;
+  }
+}
+
+.footer__column {
+  &--left {
+    display: flex;
+    align-items: center;
+
+    @include _992 {
+      margin-bottom: 25px;
+      justify-content: space-between;
+    }
+
+    @include _480 {
+      flex-direction: column;
+    }
+  }
 }
 
 .footer__logo {
   margin-right: 150px;
   width: 145px;
+
+  @include _992 {
+    margin: 0;
+  }
+
+  @include _480 {
+    margin-bottom: 15px;
+  }
 }
 
 .footer__link-list {
   display: flex;
   align-items: center;
+
+  @include _992 {
+    flex-direction: column;
+  }
 }
 
 .footer__link-item {
@@ -24,8 +57,17 @@
   line-height: 20px;
   color: #7f93a1;
 
+  @include _480 {
+    max-width: none;
+  }
+
   &:not(:last-of-type) {
     margin-right: 25px;
+
+    @include _992 {
+      margin-right: 0;
+      margin-bottom: 15px;
+    }
   }
 }
 
@@ -33,6 +75,10 @@
   display: flex;
   align-items: center;
   margin-left: auto;
+
+  @include _992 {
+    margin: 0 auto;
+  }
 }
 
 .footer__social-item {
