--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -10,9 +10,9 @@
   }
 
   &--open {
-    bottom: 0;
     background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)),
       url("../img/promo__back.jpg") no-repeat center / cover;
+    height: 100vh;
   }
 }
 
