--- a/src/scss/_news.scss
+++ b/src/scss/_news.scss
@@ -92,7 +92,7 @@
   }
 
   @include _992 {
-    padding: 0 15px;
+    padding: 15px;
     display: block;
     background: linear-gradient(
       180deg,
