add and set rich-markdown-editor

--- a/src/styles/admin.scss
+++ b/src/styles/admin.scss
@@ -2,3 +2,11 @@
   margin-left: auto;
   outline: 2px solid red;
 }
+
+.editor__wrapper {
+  background: rgb(255, 255, 255);
+  // max-width: 42em;
+  margin: 20px auto;
+  padding: 20px;
+  border: 1px solid rgb(158, 153, 153);
+}
