--- a/src/styles/news.scss
+++ b/src/styles/news.scss
@@ -1,7 +1,7 @@
 .index {
   .news {
     min-height: 100vh;
-    background: url("/news__back.jpg") no-repeat center / 100% 100%;
+    background: url('/news__back.jpg') no-repeat center / 100% 100%;
     padding-top: 120px;
     padding-bottom: 300px;
 
@@ -9,7 +9,7 @@
       padding-top: 50px;
       padding-bottom: 30px;
       min-height: auto;
-      background: url("/news__back.jpg") no-repeat center / 100% 100%;
+      background: url('/news__back.jpg') no-repeat center / 100% 100%;
     }
   }
 
@@ -22,8 +22,9 @@
     }
   }
 
-  .news__list {
-    display: flex;
+  .news__list,
+  .swiper-wrapper {
+    // display: flex;
     width: 100%;
   }
 
@@ -31,11 +32,11 @@
     display: flex;
     justify-content: space-between;
     align-items: flex-start;
-    margin: 0 -60px;
+    // margin: 0 -60px;
     overflow: hidden;
 
     @media (max-width: 1600px) {
-      margin: 0 -30px;
+      // margin: 0 -30px;
     }
 
     @include _992 {
@@ -134,5 +135,53 @@
       }
     }
   }
+}
 
+.news__swiper-wp {
+  position: relative;
+  z-index: 10;
+}
+
+.swiper {
+  padding-bottom: 50px;
+}
+
+.news__swiper-btns {
+  position: absolute;
+  outline: 2px solid blue;
+  left: 0;
+  right: 0;
+  top: 50%;
+  transform: translateY(-50%);
+  z-index: 75;
+}
+
+.news__swiper-btn {
+  position: absolute;
+  width: 50px;
+  height: 50px;
+  top: 50%;
+  transform: translateY(-50%);
+  background: red;
+  z-index: 75;
+
+  &--prev {
+    left: 0;
+  }
+
+  &--next {
+    right: 0;
+  }
+}
+
+.swiper-button-prev, .swiper-button-next {
+  z-index: 10;
+}
+
+.swiper-button-prev {
+  background: url("/back-svgrepo-com.svg") no-repeat center / contain;
+}
+
+.swiper-button-next {
+  background: url("/next-svgrepo-com.svg") no-repeat center / contain;
 }
