Настроил вывод алертов

--- a/front/src/styles/admin.scss
+++ b/front/src/styles/admin.scss
@@ -11,3 +11,11 @@
 .badge__link {
   cursor: pointer;
 }
+
+.notification__alert {
+  position: fixed;
+  right: 20px;
+  bottom: 20px;
+  z-index: 1001;
+  box-sizing: border-box;
+}
