--- a/front/src/styles/contact.scss
+++ b/front/src/styles/contact.scss
@@ -66,6 +66,24 @@
     }
   }
 
+  .contact__form-element-wrapper {
+    position: relative;
+  }
+
+  .contact__from-error {
+    position: absolute;
+    left: 0;
+    top: 0;
+    background-color: rgb(231, 76, 60);
+    border: 1px dashed black;
+    border-radius: 5px;
+    color: rgb(255, 255, 255);
+    font-family: Arial;
+    font-size: 14px;
+    padding: 6px 5px 5px;
+    z-index: 9999;
+  }
+
   .contact__input {
     border: 2px solid #c2ccd5;
     border-radius: 38px;
@@ -108,5 +126,4 @@
       text-decoration: underline;
     }
   }
-
 }
