--- a/front/src/styles/contact.scss
+++ b/front/src/styles/contact.scss
@@ -93,9 +93,17 @@
     font-weight: 600;
     font-size: 24px;
     line-height: 30px;
-    text-align: center;
-    color: #a7becb;
+    color: #535d63;
     width: 100%;
+
+    &--error {
+      border: 2px solid rgb(231, 76, 60);
+
+      &::placeholder {
+        color: red;
+        font-size: 16px;
+      }
+    }
   }
 
   .contact__btn {
