Добавил запросы на бек для бекапа данных

--- a/front/src/styles/admin.scss
+++ b/front/src/styles/admin.scss
@@ -31,3 +31,10 @@
 .applications__table-row {
   cursor: pointer;
 }
+
+.admin__list-item {
+  cursor: pointer;
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+}
